further gen 3 no ai updates